--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
                 <i class="fas fa-retweet"></i>
               </div>
               <div class="like">
-                <i class="far fa-heart"></i>
+                <i class="fas fa-heart"></i>
               </div>
             </div>
           </div>
